--- a/languages/widen-media.pot
+++ b/languages/widen-media.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Widen Media 0.0.1\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/widen-media\n"
-"POT-Creation-Date: 2019-04-18 17:38:57+00:00\n"
+"POT-Creation-Date: 2019-04-19 13:16:01+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -35,6 +35,10 @@ msgstr ""
 
 #: lib/Admin.php:284
 msgid "Added to library!"
+msgstr ""
+
+#. Description of the plugin/theme
+msgid "Search & add Widen digital assets to your WordPress media library."
 msgstr ""
 
 #. Author of the plugin/theme
