--- a/languages/widen-media.pot
+++ b/languages/widen-media.pot
@@ -2,9 +2,10 @@
 # This file is distributed under the GPL-2.0+.
 msgid ""
 msgstr ""
-"Project-Id-Version: Widen Media 0.0.1\n"
-"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/widen-media\n"
-"POT-Creation-Date: 2019-04-19 13:16:01+00:00\n"
+"Project-Id-Version: Widen Media 1.0.0\n"
+"Report-Msgid-Bugs-To: "
+"https://wordpress.org/support/plugin/wp-plugin-boilerplate\n"
+"POT-Creation-Date: 2019-06-18 20:29:03+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -13,32 +14,20 @@ msgstr ""
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "X-Generator: node-wp-i18n 1.2.3\n"
 
-#: lib/Admin.php:128
-msgid "Widen Media Library"
+#: lib/Admin.php:57
+msgid "Widen Media Settings"
 msgstr ""
 
 #. Plugin Name of the plugin/theme
 msgid "Widen Media"
 msgstr ""
 
-#: lib/Admin.php:137
-msgid "Widen Media Settings"
-msgstr ""
-
-#: lib/Admin.php:176
+#: lib/Admin.php:88
 msgid "Settings"
 msgstr ""
 
-#: lib/Admin.php:263
-msgid "Unable to get the image size."
-msgstr ""
-
-#: lib/Admin.php:284
-msgid "Added to library!"
-msgstr ""
-
 #. Description of the plugin/theme
-msgid "Search & add Widen digital assets to your WordPress media library."
+msgid "Search and add Widen digital assets to your WordPress media library."
 msgstr ""
 
 #. Author of the plugin/theme
